# crypto-hashing

./: Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: crypto-cli.rb
src/: hashing.rs  lib.rs  main.rs  test.rs  wallet.rs
tests/: hashing.rs  wallet.rs
