[package]
name = "crypto-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tiny-keccak = "2.0"
secp256k1 = "0.24"
rust-crypto = "0.2.36"
ethabi = "13.0"
web3 = "0.15"
sha3 = "0.10"
hex = "0.4"
ethers = { version = "2", features = ["rustls"] }
tiny-bip39 = "2.0.0"
rand = "0.8"
derivation-path = "0.2.0"
clap = "3.0.0-beta.2"
